--- a/all.css
+++ b/all.css
@@ -1,4 +1,33 @@
-/*
-https://github.com/yancya-house/yancya-house.github.io/blob/master/all.css
-誰かスタイル書いてくれ
-*/
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #f5f5f5;
+  color: #333;
+  line-height: 1.6;
+  padding: 20px;
+}
+
+h1,
+h2 {
+  margin-bottom: 10px;
+}
+
+a {
+  color: #1a73e8;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+p, small {
+  margin: 0 0 10px 10px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
